--- a/css/old_resume.css
+++ b/css/old_resume.css
@@ -3,17 +3,12 @@
  * Copyright 2013-2019 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-resume/blob/master/LICENSE)
  */
-
-
-/*****
-  font-family: 'Muli', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-  font-family: 'Saira Extra Condensed', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-******/
-
+/* font family currently  = 'Comic Sans MS', cursive, sans-serif replace on here and in the resume.min.css */
 body {
-  font-family: 'Helvetica Neue', Calibri, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: 'Muli', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji'; */
   padding-top: 54px;
-  color: #495057;
+  color: #868e96;
 }
 
 @media (min-width: 992px) {
@@ -29,7 +24,8 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Helvetica Neue', Calibri, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: 'Saira Extra Condensed', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji'; */
   font-weight: 700;
   text-transform: uppercase;
   color: #343a40;
@@ -48,24 +44,16 @@ h3 {
   font-size: 2rem;
 }
 
-p {
-  font-size: 1.3rem;
-}
-
-div {
-  font-size: 1.3rem;
-}
-
-
 p.lead {
-  font-size: 1.4rem;
+  font-size: 1.15rem;
   font-weight: 400;
 }
 
 .subheading {
   text-transform: uppercase;
   font-weight: 500;
-  font-family: 'Helvetica Neue', Calibri, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: 'Saira Extra Condensed', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji'; */
   font-size: 1.5rem;
 }
 
@@ -87,7 +75,7 @@ p.lead {
 }
 
 .social-icons a:hover {
-  background-color: #2CAA3B;
+  background-color: #BD5D38;
 }
 
 .dev-icons {
@@ -95,7 +83,7 @@ p.lead {
 }
 
 .dev-icons .list-inline-item i:hover {
-  color: #2CAA3B;
+  color: #BD5D38;
 }
 
 #sideNav .navbar-nav .nav-item .nav-link {
@@ -105,7 +93,7 @@ p.lead {
 }
 
 #sideNav .navbar-toggler:focus {
-  outline-color: #A1F947;
+  outline-color: #d48a6e;
 }
 
 @media (min-width: 992px) {
@@ -175,17 +163,17 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #075926 !important;
+  background-color: #BD5D38 !important;
 }
 
 .text-primary {
-  color: #2CAA3B !important;
+  color: #BD5D38 !important;
 }
 
 a {
-  color: #2CAA3B;
+  color: #BD5D38;
 }
 
 a:hover, a:focus, a:active {
-  color: #086C2E;
+  color: #824027;
 }
